--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <p/>
 <p class="mb-16">
 <b>Educacionante</b><br>
-<span>Comunidad de educadores en el hogar.</span><br>Pretende convertirse en la mejor comunidad online de homeschooles en español. Difundiendo recursos de calidad y creando espacios para compartir experiencias.<br>
+<span>Comunidad de educadores en el hogar.</span><br>Pretende convertirse en la mejor comunidad online de homeschoolers en español. Difundiendo recursos de calidad y creando espacios para compartir experiencias.<br>
 <a href="https://educacionante.com" target="_blank">educacionante.com</a>
 <p/>
 <p>
